# dcgm-stats

./: README.md  pyproject.toml
dcgm_stats/: __init__.py  __main__.py  lib.py
